# cleanpkgcache

./: .gitignore  Cargo.toml  README.md  todo.md
.claude/: settings.local.json
src/: main.rs
